# news-bot

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION_PROCESS.md  Dockerfile  Dockerfile.api  Dockerfile.api.prod  ERS_PreventIA_News_Analytics_v1.0.md  FRESH_DATABASE_TEST_RESULTS.md  MANUAL_TESTING_CHECKLIST.md  PROJECT_STATUS_ANALYSIS.md  README.md  REFACTORING_PHASE1_PLAN.md  SESSION_HANDOFF_2025-07-13.md  SESSION_HANDOFF_2025-07-14.md  SESSION_HANDOFF_2025-07-14_FINAL.md  SESSION_HANDOFF_2025-07-14_PHASE2.md  SESSION_HANDOFF_2025-07-14_PHASE3.md  SOURCE_RECREATION_GUIDE.md  __init__.py  crontab.template  docker-compose.prod.yml  docker-compose.yml  e2e_validation.sh  entrypoint.sh  fresh_database_test.sh  gemini.md  init_fresh_database.sh  main.py  preventia-cli  pyproject.toml  quick_system_check.sh  requirements.txt  restore_sources.py  restore_sources_complete.py  (+6 more)
cli/: EXAMPLES.md  README.md  __init__.py  base.py  compliance_cli.py  main.py  scraper_cli.py  scraper_cli_improved.py  source_cli.py  user_cli.py
cli/completion/: preventia-cli-completion.bash
config/: monitoring.yml  nginx.prod.conf  redis.conf
docs/: README.md
docs/architecture/: data-flow.md  directory-structure.md  system-overview.md  tech-stack.md
docs/conversations/: 2025-06-27_database-implementation.md  2025-06-27_project-kickoff.md  2025-06-28_nlp-sentiment-analysis-implementation.md  2025-06-30_standards-automation-implementation.md  2025-07-01_fase3-fastapi-implementation.md  README.md
docs/decisions/: ADR-001-project-scope-change.md  ADR-002-database-architecture.md  ADR-003-migration-strategy.md  ADR-004-nlp-sentiment-analysis.md  ADR-005-testing-framework-architecture.md  ADR-006-legal-compliance-framework.md  ADR-007-prompts-strategy-optimization.md  ADR-008-medical-ux-ui-design-strategy.md  README.md  adr-template.md
docs/deployment/: manual-tecnico-produccion.md
docs/development/: scrapers-usage-guide.md
docs/implementation/: README.md  automated-scraper-generation-system.md  automation-testing-implementation.md  critical-issues-resolution-2025-07-03.md  development-strategy-phase-6-revised.md  development-strategy-phase-6.md  evaluacion-pendientes-2025-07-01.md  export-functionality-complete-2025-07-04.md  fase3-fastapi-analytics-resultados.md  fase4-react-dashboard-implementation.md  fase4-react-dashboard-plan.md  fase4-week2-day1-sentimentchart-results.md  final-status-report-2025-07-07.md  legacy-dashboard-implementation.md  legacy-prototype-analysis.md  legacy-prototype-implementation-strategy.md  legacy-test-suite-summary.md  legacy-testing-results.md  legal-compliance-implementation.md  manual-tecnico-implementacion-dashboard-legacy.md  migration-roadmap.md  news-sources-administration-plan-2025-07-04.md  news-sources-integration-test-results-2025-07-07.md  phase-1-results.md  (+9 more)
legal/: medical-disclaimers.md  privacy-policy-template.md
manual/: 01_DescripcionSistema.md  02_DisenoTecnico.md  03_InstalacionConfiguracion.md  04_Despliegue.md  05_ResolucionProblemas.md  07_APIReference.md  GUIA_SCRIPTS.md  PLAN_MEJORAS_MANUAL_TECNICO.md  README.md
preventia-dashboard/: .dockerignore  .env.example  .env.production.template  .gitignore  DOCKER_VALIDATION.md  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-production-fix.sh  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: __init__.py  apply_legal_compliance.py  backup_system.sh  batch_sentiment_analysis.py  batch_topic_classification.py  check_conventional_commit.py  cleanup_imports.py  compliance_review_helper.py  create_demo_users.py  discover_sources.py  doc_quality_check.py  generate_sample_scraper.py  generate_scraper.py  init_data.py  install.sh  optimize_database.py  parallel_sentiment_analysis.py  run_migrated_scrapers.py  run_production_tests.sh  test_automation_api.py  test_automation_batch.py  test_robots_checker.py  test_scraper_automation.py  validate_documentation.sh  validate_installation.sh  verify_docs.py
services/: __init__.py
tests/: README.md  __init__.py  conftest.py  legacy_test_database.py  legacy_test_sentiment_analysis.py  pytest.ini  requirements-test.txt  run_integration_tests.py  verify_testing_framework.py
(+299 files in other folders)
